k8s-config/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookapp-ingress
#  namespace: bookapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
      service:
        name: books
        port:
          number: 3000
  rules:
  - host: bookapp.com # domain name
    http:
      paths:
      - path: "/book"
        pathType: Prefix
        backend:
          service: 
            name: books
            port:
              number: 3000
      - path: /order
        pathType: Prefix
        backend:
          service: 
            name: orders
            port:
              number: 5000
      - path: /customer
        pathType: Prefix
        backend:
          service: 
            name: customers
            port:
              number: 4000
