k8s-config/ingress/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
#  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
      service:
        name: jenkins-service
        port:
          number: 8080
  rules:
  - host: jenkins.om.com # domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: jenkins-service
            port:
              number: 8080
      - path: /github-webhook
        pathType: Prefix
        backend:
          service: 
            name: jenkins-service
            port:
              number: 8080
